bad/assign_binop_sadd_bool.example_compiler_output
ERROR
[1mbad/assign_binop_sadd_bool.lat:5:8: [1;31merror: [0;1mleft side is not assignable[m
	x + y = true;
	      [1;32m^[m
[1mbad/assign_binop_sadd_bool.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	x + y = true;
	[1;32m^[m
